clusters/microk8s/infrastructure/influxdb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: influxdb
  labels:
    name: influxdb
