clusters/microk8s/infrastructure/influxdb/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influxdb
  labels:
    app: influxdb
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8086
    targetPort: 8086
    protocol: TCP
  selector:
    app: influxdb
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-external
  namespace: influxdb
  labels:
    app: influxdb
spec:
  type: NodePort
  ports:
  - name: http
    port: 8086
    targetPort: 8086
    nodePort: 31086
    protocol: TCP
  selector:
    app: influxdb
